--- a/stylesheet.css
+++ b/stylesheet.css
@@ -2,12 +2,12 @@ h1#site-title {
   font-size:72px;
   color: charcoal;
   font-weight: bold;
-  font: helvetica;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 header p {
   font-size: 48px;
   color: #818589;
   font-weight: bold;
-  font: helvetica;
+  font-family: Arial, Helvetica, sans-serif;
 }
