--- a/stylesheet.css
+++ b/stylesheet.css
@@ -11,3 +11,43 @@ header p {
   font-weight: bold;
   font-family: Arial, Helvetica, sans-serif;
 }
+
+* {
+  box-sizing: border-box;
+}
+
+body{
+  margin: 0;
+  padding: 0;
+  background-color: #ccc;
+}
+
+nav ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  background-color: #444;
+  text-align: center;
+}
+
+nav li {
+  display: block;
+  text-decoration: none;
+}
+
+nav a {
+  font-family: sans-serif
+  height: 40%;
+  line-height:40%;
+  color: #fff;
+}
+
+nav a:hover {
+  background-color: #005f5f;
+}
+
+nav a.active {
+  bckground-color: #eee;
+  color: #444;
+  cursor: default;
+}
