--- a/stylesheet.css
+++ b/stylesheet.css
@@ -13,41 +13,46 @@ header p {
 }
 
 * {
+  margin: 0;
+  padding: 0;
   box-sizing: border-box;
 }
 
-body{
-  margin: 0;
-  padding: 0;
-  background-color: #ccc;
+body {
+  font-family: Arial, Helvetica, sans-serif;
+  background-color: #f2f2f2;
 }
+
+header {
+  background-color: #333;
+  color: #fff;
+  padding: 20px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
 
 nav ul {
   list-style: none;
-  padding: 0;
   margin: 0;
-  background-color: #444;
-  text-align: center;
+  padding: 0;
+  display: flex;
 }
 
-nav li {
-  display: block;
-  text-decoration: none;
+nav ul li {
+  margin-right: 15px;
 }
 
 nav a {
-  font-family: sans-serif;
-  height: 40%;
-  line-height:40%;
+  text-decoration: none;
   color: #fff;
 }
 
 nav a:hover {
-  background-color: #005f5f;
+  text-decoration: underline;
 }
 
 nav a.active {
-  background-color: #eee;
-  color: #444;
-  cursor: default;
+  font-weight: bold;
 }
