--- a/stylesheet.css
+++ b/stylesheet.css
@@ -22,8 +22,12 @@ nav ul {
   display: flex;
   text-align: center;
 }
-
-ul {
-  
+nav ul li a {
+  text-decoration: none;
+  padding: 12px;
+  display: block;
+  text-transform: uppercase;
+  font-size: 14px;
+  letter-spacing: 1px;
 }
 
