--- a/stylesheet.css
+++ b/stylesheet.css
@@ -15,6 +15,10 @@ header{
   justify-content: center;
 }
 
+nav {
+  text-align: center;
+}
+
 nav ul {
   list-style: none;
   margin: 0;
@@ -29,5 +33,13 @@ nav ul li a {
   font-size: 14px;
   letter-spacing: 1px;
   text-align: center;
+}
+
+.main-image {
+  float: left;
+  height: auto;
+  width: 50%;
+  display:block;
+  margin: 0 auto;
 }
 
