--- a/stylesheet.css
+++ b/stylesheet.css
@@ -37,9 +37,7 @@ nav ul li a {
 
 .main-image {
   float: left;
-  height: auto;
-  max-width: 100%;
-  display:block;
-  margin: 0 auto;
+  max-width: 40%;
+  margin-right: 20px;
 }
 
