--- a/stylesheet.css
+++ b/stylesheet.css
@@ -39,8 +39,30 @@ nav ul li a {
 }
 
 .main-image {
-  float: left;
-  max-width: 40%;
-  margin-right: 20px;
+  width: 100%;
+  padding: 20px;
+}
+
+.container {
+  display: flex;
+  flex-wrap: wrap;
+}
+.figure {
+  flex:1;
+}
+.article-info {
+  flex: 1;
+  text-align: left;
+  padding: 20px;
+}
+
+.article-title {
+  flex: 1; 
+  text-align: left;
+}
+
+figcaption{
+  text-align: center;
+  font-size: 14px;
 }
 
