--- a/stylesheet.css
+++ b/stylesheet.css
@@ -8,7 +8,7 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
-header{
+header {
   background-color: #899499;
   padding: 30px;
   text-align: center;
@@ -28,6 +28,7 @@ nav ul {
   display: flex;
   justify-content: center;
 }
+
 nav ul li a {
   text-decoration: none;
   padding: 12px;
@@ -38,31 +39,57 @@ nav ul li a {
   text-align: center;
 }
 
-.main-image {
-  width: 100%;
-  padding: 20px;
-}
-
 .container {
   display: flex;
-  flex-wrap: wrap;
+  justify-content: center;
+  align-items: flex-start; 
 }
-.figure {
-  flex:1;
-}
-.article-info {
-  flex: 1;
-  text-align: left;
+
+.image-container {
+  flex: 1; 
   padding: 20px;
 }
 
-.article-title {
-  flex: 1; 
-  text-align: left;
+.main-image {
+  width: 80%; 
+  margin-top: 50px;
+  margin-left: 50px;
 }
 
-figcaption{
+.content {
+  flex: 1; /* Occupy available space */
+  padding: 20px;
+}
+
+.article-info p {
+  margin-bottom: 20px;
+  padding-right: 50px;
+  width: 90%
+}
+
+#article-title {
+  font-size: 36px;
+  color: #333;
+  margin-bottom: 50px;
+  margin-top: 50px;
+}
+
+figcaption {
   text-align: center;
-  font-size: 14px;
 }
 
+footer {
+  display: flex;
+  justify-content: space-between;
+  background-color: #f5f5f5;
+  padding: 20px;
+}
+
+.footer-left,
+.footer-right {
+  width: 45%;
+}
+
+.footer-right p {
+  text-align: right;
+}
